--- a/estilos/casanik.css
+++ b/estilos/casanik.css
@@ -11,16 +11,19 @@ h1 {
     margin-top: 30px;
 }
 
+#container-casanik {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:60px;
+}
+
 #container {
     width: 800px;
     height: 400px;
     background-color: rgb(29, 29, 29);
     display: flex;
     justify-content: space-between; /*mudar depois que tiiver imagem*/
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border-radius: 20px;
     border: 20px solid #1F7B00;
 }
@@ -45,7 +48,7 @@ h1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 500%);
+    transform: translate(-50%, 350%);
     border: none;
     background-image: url(../imagem/background-lucky.jpg);
     border-radius: 20px;
@@ -62,6 +65,6 @@ h1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-46%, 1200%);
+    transform: translate(-46%, 900%);
     font-size: 22px;
 }
