--- a/estilos/casanik.css
+++ b/estilos/casanik.css
@@ -10,6 +10,7 @@ h1 {
     font-size: 3rem;
     margin-top: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 1px -2px 5px rgba(255, 255, 255, 0.137);
 }
 
 body {
