--- a/estilos/casanik.css
+++ b/estilos/casanik.css
@@ -17,6 +17,8 @@ body {
     background-image: url(../imagem/fundo.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 header {
@@ -101,4 +103,16 @@ header {
     font-size: 22px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.tabela-container {
+    display: flex;
+    flex-flow: row nowrap;
+    background-color: #365f19;
+    width: 400px;
+    height: 334px;
+}
+
+.tabela {
+    
 }
